--- a/escDos.html
+++ b/escDos.html
@@ -10,6 +10,9 @@
 </head>
 
 <body id="bodyDos">
+	<audio class="Audio-1" src="./src/recording/0.3instruccionesRepartirmanzanas.m4a" autoplay="autoplay" loop>
+		Tu navegador no soporta el elemento "audios".
+	</audio>
 	<div id="landscape">
 		<div>
 	 <p>
