--- a/escUno.html
+++ b/escUno.html
@@ -10,6 +10,9 @@
 </head>
 
 <body id="body-uno">
+	<audio class="Audio-1" src="./src/recording/0.2instruccionesRecojermanzanas.m4a" autoplay="autoplay" loop>
+		Tu navegador no soporta el elemento "audios".
+	</audio>
 	<div id="landscape">
 		<div>
 	 <p>
