--- a/escUno.html
+++ b/escUno.html
@@ -29,7 +29,7 @@
 						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="emptyOne empty"  ></div>
+				<div class="emptyOne empty empty-final"  ></div>
 			</div>
 			<div class="apple-container">
 				<div class="emptyTwo empty" >
