lulu observation modification

--- a/escDos.html
+++ b/escDos.html
@@ -29,7 +29,7 @@
 						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="emptyOne empty"  ></div>
+				<div class="emptyOne empty"  id="emptyOneRed"></div>
 			</div>
 			<div class="apple-container apple-container-escdos">
 				<div class="emptyTwo empty" >
@@ -37,7 +37,7 @@
 						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="emptyTwo empty"></div>
+				<div class="emptyTwo empty" id="emptyTwoRed"></div>
 			</div>
 		</div>
 		<div class="apple-green-container">
@@ -47,7 +47,7 @@
 						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="empty emptyTrhee"></div>
+				<div class="empty emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
 			<div class="apple-container apple-container-green-four apple-container-escdos">
 				<div class="empty emptyFour">
@@ -55,7 +55,7 @@
 						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="empty emptyFour"></div>
+				<div class="empty emptyFour" id="emptyFourGreen"></div>
 			</div>
 		</div>
 	</div>
