--- a/escUno.html
+++ b/escUno.html
@@ -24,38 +24,38 @@
 	<div class="container">
 		<div class="apple-red-container">
 			<div class="apple-container">  
-				<div class="empty emptyOne" id="btn10">
+				<div class="emptyOne" id="btn10">
 					<div class="fillOne fill" draggable="true">
 						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="emptyOne empty empty-final"  ></div>
+				<div class="emptyOne empty-final" id="emptyOneRed" ></div>
 			</div>
 			<div class="apple-container">
-				<div class="emptyTwo empty" >
+				<div class="emptyTwo" >
 					<div class="fillTwo fill" draggable="true">
 						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="emptyTwo empty"></div>
+				<div class="emptyTwo" id="emptyTwoRed"></div>
 			</div>
 		</div>
 		<div class="apple-green-container">
 			<div class="apple-container apple-container-green-trhee">
-				<div class="empty emptyTrhee">
+				<div class="emptyTrhee">
 					<div class="fillTrhee fill" draggable="true">
 						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="empty emptyTrhee"></div>
+				<div class="emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
 			<div class="apple-container apple-container-green-four">
-				<div class="empty emptyFour">
+				<div class="emptyFour">
 					<div  class="fillFour fill" draggable="true">
 						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
-				<div class="empty emptyFour"></div>
+				<div class="emptyFour" id="emptyFourGreen"></div>
 			</div>
 		</div>
 	</div>
