add function touch

--- a/escUno.html
+++ b/escUno.html
@@ -16,10 +16,11 @@
 	<div id="landscape">
 		<div>
 	 <p>
-	 <img src="cambia la ruta de la imagen" alt=""><br>
-	 ¡Gira el móvil! <br><span>Please</span>
+	 <img class="rotar-img" src="src/img/rotar.png" alt=""><br>
+	 ¡Gira el móvil! <br><span>por favor</span>
 	 </p>
 	 </div>
+	 
  </div>
 	<div class="container">
 		<div class="apple-red-container">
@@ -59,8 +60,9 @@
 			</div>
 		</div>
 	</div>
+	<script src="./src/DragDropTouch.js"></script>
 	<script src="./src/escUno.js"></script>
-
+	
 </body>
 
 </html>
