--- a/escDos.html
+++ b/escDos.html
@@ -21,45 +21,46 @@
 	 </p>
 	 </div>
  </div>
-	<div class="container">
-		<div class="apple-red-container">
-			<div class="apple-container apple-container-escdos">  
-				<div class="empty emptyOne" id="btn10">
+	<div class="container" id="container-id">
+		<div class="apple-red-container" id="apple-red-container-id">
+			<div class="apple-container apple-container-escdos" id="apple-container-id">  
+				<div class="empty emptyOne" id="emptyOneRed">
 					<div class="fillOne fill" draggable="true">
-						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
+						<img class="img" id="img1" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyOne empty"  id="emptyOneRed"></div>
 			</div>
-			<div class="apple-container apple-container-escdos">
-				<div class="emptyTwo empty" >
+			<div class="apple-container apple-container-escdos" id="apple-container-id">
+				<div class="emptyTwo empty" id="emptyTwoRed">
 					<div class="fillTwo fill" draggable="true">
-						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
+						<img class="img" id="img2" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyTwo empty" id="emptyTwoRed"></div>
 			</div>
 		</div>
 		<div class="apple-green-container">
-			<div class="apple-container apple-container-green-trhee apple-container-escdos">
-				<div class="empty emptyTrhee">
+			<div class="apple-container apple-container-green-trhee apple-container-escdos" id="apple-container-id">
+				<div class="empty emptyTrhee" id="emptyTrheeGreen">
 					<div class="fillTrhee fill" draggable="true">
-						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
+						<img class="img" id="img3" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="empty emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
-			<div class="apple-container apple-container-green-four apple-container-escdos">
-				<div class="empty emptyFour">
+			<div id="apple-container-id" class="apple-container apple-container-green-four apple-container-escdos">
+				<div class="empty emptyFour" id="emptyFourGreen">
 					<div  class="fillFour fill" draggable="true">
-						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
+						<img class="img" id="img4" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="empty emptyFour" id="emptyFourGreen"></div>
 			</div>
 		</div>
 	</div>
-	<script src="./src/escUno.js"></script>
+	<script src="./src/DragDropTouch.js"></script>
+	<script src="./src/escDos.js"></script>
 
 </body>
 
