--- a/escUno.html
+++ b/escUno.html
@@ -22,47 +22,47 @@
 	 </div>
 	 
  </div>
-	<div class="container">
-		<div class="apple-red-container">
-			<div class="apple-container">  
-				<div class="emptyOne" id="btn10">
+	<div class="container" id="container-id">
+		<div class="apple-red-container" id="apple-red-container-id">
+			<div class="apple-container" id="apple-container-id">  
+				<div class="emptyOne emptyOne-mobil" id="emptyOneRed">
 					<div class="fillOne fill" draggable="true">
-						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
+						<img class="img" id="img1" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyOne empty-final" id="emptyOneRed" ></div>
 			</div>
-			<div class="apple-container">
-				<div class="emptyTwo" >
+			<div class="apple-container" id="apple-container-id">
+				<div class="emptyTwo" id="emptyTwoRed" >
 					<div class="fillTwo fill" draggable="true">
-						<img class="img" src="./src/img/manzana_red.png" alt="" srcset="">
+						<img class="img" id="img2" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyTwo" id="emptyTwoRed"></div>
 			</div>
 		</div>
-		<div class="apple-green-container">
-			<div class="apple-container apple-container-green-trhee">
-				<div class="emptyTrhee">
+		<div class="apple-green-container" >
+			<div class="apple-container apple-container-green-trhee" id="apple-container-id" >
+				<div class="emptyTrhee" id="emptyTrheeGreen">
 					<div class="fillTrhee fill" draggable="true">
-						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
+						<img class="img" id="img3" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
-			<div class="apple-container apple-container-green-four">
-				<div class="emptyFour">
+			<div class="apple-container apple-container-green-four" id="apple-container-id">
+				<div class="emptyFour" id="emptyFourGreen">
 					<div  class="fillFour fill" draggable="true">
-						<img class="img" src="./src/img/manzana-verde.png" alt="" srcset="">
+						<img class="img" id="img4" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
 				</div>
 				<div class="emptyFour" id="emptyFourGreen"></div>
 			</div>
 		</div>
 	</div>
-	<script src="./src/DragDropTouch.js"></script>
 	<script src="./src/escUno.js"></script>
-	
+	<script src="./src/DragDropTouch.js"></script>
+
 </body>
 
 </html>
