--- a/escDos.html
+++ b/escDos.html
@@ -24,7 +24,7 @@
 	<div class="container" id="container-id">
 		<div class="apple-red-container" id="apple-red-container-id">
 			<div class="apple-container apple-container-escdos" id="apple-container-id">  
-				<div class="empty emptyOne" id="emptyOneRed">
+				<div class="empty emptyOne" id="emptyOneRedId">
 					<div class="fillOne fill" draggable="true">
 						<img class="img" id="img1" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
@@ -32,7 +32,7 @@
 				<div class="emptyOne empty"  id="emptyOneRed"></div>
 			</div>
 			<div class="apple-container apple-container-escdos" id="apple-container-id">
-				<div class="emptyTwo empty" id="emptyTwoRed">
+				<div class="emptyTwo empty" id="emptyTwoRedId">
 					<div class="fillTwo fill" draggable="true">
 						<img class="img" id="img2" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
@@ -42,7 +42,7 @@
 		</div>
 		<div class="apple-green-container">
 			<div class="apple-container apple-container-green-trhee apple-container-escdos" id="apple-container-id">
-				<div class="empty emptyTrhee" id="emptyTrheeGreen">
+				<div class="empty emptyTrhee" id="emptyTrheeGreenId">
 					<div class="fillTrhee fill" draggable="true">
 						<img class="img" id="img3" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
@@ -50,7 +50,7 @@
 				<div class="empty emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
 			<div id="apple-container-id" class="apple-container apple-container-green-four apple-container-escdos">
-				<div class="empty emptyFour" id="emptyFourGreen">
+				<div class="empty emptyFour" id="emptyFourGreenId">
 					<div  class="fillFour fill" draggable="true">
 						<img class="img" id="img4" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
