--- a/escUno.html
+++ b/escUno.html
@@ -25,7 +25,7 @@
 	<div class="container" id="container-id">
 		<div class="apple-red-container" id="apple-red-container-id">
 			<div class="apple-container" id="apple-container-id">  
-				<div class="emptyOne emptyOne-mobil" id="emptyOneRed">
+				<div class="emptyOne emptyOne-mobil" id="emptyOneRedId">
 					<div class="fillOne fill" draggable="true">
 						<img class="img" id="img1" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
@@ -33,7 +33,7 @@
 				<div class="emptyOne empty-final" id="emptyOneRed" ></div>
 			</div>
 			<div class="apple-container" id="apple-container-id">
-				<div class="emptyTwo" id="emptyTwoRed" >
+				<div class="emptyTwo" id="emptyTwoRedId" >
 					<div class="fillTwo fill" draggable="true">
 						<img class="img" id="img2" src="./src/img/manzana_red.png" alt="" srcset="">
 					</div>
@@ -43,7 +43,7 @@
 		</div>
 		<div class="apple-green-container" >
 			<div class="apple-container apple-container-green-trhee" id="apple-container-id" >
-				<div class="emptyTrhee" id="emptyTrheeGreen">
+				<div class="emptyTrhee" id="emptyTrheeGreenId">
 					<div class="fillTrhee fill" draggable="true">
 						<img class="img" id="img3" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
@@ -51,7 +51,7 @@
 				<div class="emptyTrhee" id="emptyTrheeGreen"></div>
 			</div>
 			<div class="apple-container apple-container-green-four" id="apple-container-id">
-				<div class="emptyFour" id="emptyFourGreen">
+				<div class="emptyFour" id="emptyFourGreenId">
 					<div  class="fillFour fill" draggable="true">
 						<img class="img" id="img4" src="./src/img/manzana-verde.png" alt="" srcset="">
 					</div>
