modify button index for responsive

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	 </p>
 	 </div>
  </div>
-	<div class="wrap">
+	<div class="wrap" id="wrap-id">
 
-		<button class="button" id="elboton"><img class="button-play"
+		<button class="button" id="elboton"><img id="button-play-id" class="button-play"
 				src="./src/img/play.png" alt="" srcset=""></button>
 	</div>
 	<script src="./src/index.js"></script>
